# Typst.Native

./: .gitignore  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  Typst.Native.slnx
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
native/typst-ffi/: Cargo.toml  build.rs  cbindgen.toml  deny.toml
native/typst-ffi/include/: typst_ffi.h
native/typst-ffi/src/: lib.rs
native/typst-scribus/: Cargo.toml
native/typst-scribus/src/: color.rs  image.rs  lib.rs  render.rs
src/Typst.Native/: DiagnosticSeverity.cs  Typst.Native.csproj  TypstCompileResult.cs  TypstCompiler.cs  TypstDiagnostic.cs  TypstException.cs
src/Typst.Native.Runtime/: README.md  Typst.Native.Runtime.csproj  Typst.Native.Runtime.targets
src/Typst.Native.Tests/: CompilerTests.cs  Typst.Native.Tests.csproj  VirtualFileTests.cs
src/Typst.Native/Interop/: NativeMethods.cs  SafeHandles.cs
