[package]
name = "typst-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "C FFI bindings for the Typst compiler, used by Typst.Native"

[lib]
name = "typst_ffi"
crate-type = ["cdylib"]

[dependencies]
# Core Typst crates — pin to a specific minor version for stability.
# Update these when upgrading the Typst version.
typst = "0.14"
typst-pdf = "0.14"
typst-svg = "0.14"
typst-render = "0.12"
typst-kit = "0.14"

# Supporting crates
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
comemo = "0.5"
ecow = "0.2"
parking_lot = "0.12"
once_cell = "1"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"
