[package]
name = "typst-ffi"
# Versioning convention: major and minor match the bundled Typst version
# (see the typst dependency below), same as the C# packages. Keep the
# version string in `typst_version()` (src/lib.rs) in sync.
version = "0.15.0"
edition = "2021"
license = "MIT"
publish = false
description = "C FFI bindings for the Typst compiler, used by Typst.Native"

[lib]
name = "typst_ffi"
crate-type = ["cdylib"]

[dependencies]
# Core Typst crates — pin to a specific minor version for stability.
# Update these when upgrading the Typst version.
typst = "0.15"
typst-layout = "0.15"
typst-pdf = "0.15"
typst-svg = "0.15"
typst-render = "0.15"
typst-scribus = { path = "../typst-scribus" }
typst-kit = { version = "0.15", features = ["scan-fonts", "embedded-fonts"] }

# Supporting crates
# tiny-skia must match the version used by typst-render (Pixmap flows across).
tiny-skia = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
comemo = "0.5"
parking_lot = "0.12"
once_cell = "1"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"
