[package]
name = "typst-scribus"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "Scribus SLA exporter for Typst documents"

[lib]
name = "typst_scribus"
path = "src/lib.rs"

[dependencies]
typst-library = "0.15"
typst-layout = "0.15"
# Used to read font name-table entries; must match the version used by
# typst-library so `ttf_parser::Face` types line up across the boundary.
ttf-parser = "0.25"
xmlwriter = "0.1"
base64 = "0.22"
